fixes #1261 - tags do not align as expected when the tagify container with height set to it

--- a/src/tagify.scss
+++ b/src/tagify.scss
@@ -132,6 +132,7 @@
 
     display       : inline-flex;
     align-items   : flex-start;
+    align-content : baseline;
     flex-wrap     : wrap;
     border        : 1px solid var(--tags-border-color);
     padding       : 0;
